--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -23,7 +23,7 @@
                     </mat-error>
                 </mat-form-field>
                 <div class="hc-txt-right hc-ptop-2">
-                    <button type="submit" mat-raised-button color="primary">Login</button>
+                    <button type="submit" mat-raised-button color="primary" class="hc-mright-1">Login</button>
                     <button type="button" mat-button>Cadastre-se</button>
                 </div>
             </form>
