--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -24,7 +24,7 @@
                 </mat-form-field>
                 <div class="hc-txt-right hc-ptop-2">
                     <button type="submit" mat-raised-button color="primary" class="hc-mright-1">Login</button>
-                    <button type="button" mat-button>Cadastre-se</button>
+                    <button type="button" mat-button [routerLink]="['/user-registration']">Cadastre-se</button>
                 </div>
             </form>
         </mat-card-content>
