alterando layout do login

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -22,10 +22,22 @@
                         Informe a senha
                     </mat-error>
                 </mat-form-field>
-                <div class="hc-txt-right hc-ptop-2">
-                    <button type="submit" mat-raised-button color="primary" class="hc-mright-1">Login</button>
-                    <button type="button" mat-button [routerLink]="['/user-registration']">Cadastre-se</button>
-                </div>
+                <footer>
+                    <div class="hc-txt-right hc-ptop-1">
+                        <button mat-button [routerLink]="['/recover-password']">Esqueceu a senha?</button>
+                    </div>
+                    <div class="hc-w-100 hc-ptop-1">
+                        <button type="submit" mat-raised-button color="primary" class="hc-w-100">Login</button>
+                    </div>
+                    <div class="hc-txt-left hc-ptop-1 hc-flex hc-align-items">
+                        <div>
+                            <span>Não tem uma conta?</span>
+                        </div>
+                        <div>
+                            <a mat-button [routerLink]="['/user-registration']">Cadastre-se</a>
+                        </div>
+                    </div>
+                </footer>
             </form>
         </mat-card-content>
     </mat-card>
