--- a/src/app/features/recover-password/recover-password.component.html
+++ b/src/app/features/recover-password/recover-password.component.html
@@ -1,11 +1,11 @@
-<div class="hc-w-30 hc-center hc-ptop-5">
+<div class="fc-w-30 fc-center fc-ptop-5">
     <mat-card>
-        <header class="hc-txt-center hc-ptop-2">
+        <header class="fc-txt-center fc-ptop-2">
             <h1>Recuperação de senha</h1>
         </header>
-        <mat-card-content class="hc-ptop-2">
+        <mat-card-content class="fc-ptop-2">
             <form [formGroup]="recoverPasswordForm" (submit)="sendLinktoEmail()">
-                <mat-form-field class="hc-w-100 hc-ptop-2">
+                <mat-form-field class="fc-w-100 fc-ptop-2">
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="email" required>
                     <mat-error *ngIf="recoverPasswordForm.controls['email'].hasError('required')">
@@ -15,8 +15,8 @@
                         Email inválido
                     </mat-error>
                 </mat-form-field>
-                <footer class="hc-txt-right hc-ptop-2">
-                    <button type="submit" mat-raised-button color="primary" class="hc-mright-1">Receber link</button>
+                <footer class="fc-txt-right fc-ptop-2">
+                    <button type="submit" mat-raised-button color="primary" class="fc-mright-1">Receber link</button>
                     <button type="button" mat-button [routerLink]="['/login']">Cancelar</button>
                 </footer>
             </form>
