--- a/src/styles.css
+++ b/src/styles.css
@@ -8,53 +8,53 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: transparent !important;
 }
 
-.hc-center { margin: 0 auto; }
+.fc-center { margin: 0 auto; }
 
-.hc-success-message { color: #ffffff; background-color: #008000; text-align: center; }
-.hc-error-message { color: #ffffff; background-color: #ff0000; text-align: center; }
+.fc-success-message { color: #ffffff; background-color: #008000; text-align: center; }
+.fc-error-message { color: #ffffff; background-color: #ff0000; text-align: center; }
 
-.hc-txt-center { text-align: center; }
-.hc-txt-left { text-align: left; }
-.hc-txt-right { text-align: right; }
+.fc-txt-center { text-align: center; }
+.fc-txt-left { text-align: left; }
+.fc-txt-right { text-align: right; }
 
-.hc-flex { display: flex; }
-.hc-align-items { align-items: center; }
+.fc-flex { display: flex; }
+.fc-align-items { align-items: center; }
 
-.hc-ptop-1 { padding-top: 8px; }
-.hc-ptop-2 { padding-top: 16px; }
-.hc-ptop-3 { padding-top: 24px; }
-.hc-ptop-4 { padding-top: 32px; }
-.hc-ptop-5 { padding-top: 40px; }
+.fc-ptop-1 { padding-top: 8px; }
+.fc-ptop-2 { padding-top: 16px; }
+.fc-ptop-3 { padding-top: 24px; }
+.fc-ptop-4 { padding-top: 32px; }
+.fc-ptop-5 { padding-top: 40px; }
 
-.hc-mright-1 { margin-right: 8px; }
-.hc-mright-2 { margin-right: 16px; }
-.hc-mright-3 { margin-right: 24px; }
-.hc-mright-4 { margin-right: 32px; }
-.hc-mright-5 { margin-right: 40px; }
+.fc-mright-1 { margin-right: 8px; }
+.fc-mright-2 { margin-right: 16px; }
+.fc-mright-3 { margin-right: 24px; }
+.fc-mright-4 { margin-right: 32px; }
+.fc-mright-5 { margin-right: 40px; }
 
-.hc-mleft-1 { margin-left: 8px; }
-.hc-mleft-2 { margin-left: 16px; }
-.hc-mleft-3 { margin-left: 24px; }
-.hc-mleft-4 { margin-left: 32px; }
-.hc-mleft-5 { margin-left: 40px; }
+.fc-mleft-1 { margin-left: 8px; }
+.fc-mleft-2 { margin-left: 16px; }
+.fc-mleft-3 { margin-left: 24px; }
+.fc-mleft-4 { margin-left: 32px; }
+.fc-mleft-5 { margin-left: 40px; }
 
-.hc-w-5 { width: 5%; }
-.hc-w-10 { width: 10%; }
-.hc-w-15 { width: 15%; }
-.hc-w-20 { width: 20%; }
-.hc-w-25 { width: 25%; }
-.hc-w-30 { width: 30%; }
-.hc-w-35 { width: 35%; }
-.hc-w-40 { width: 40%; }
-.hc-w-45 { width: 45%; }
-.hc-w-50 { width: 50%; }
-.hc-w-55 { width: 55%; }
-.hc-w-60 { width: 60%; }
-.hc-w-65 { width: 65%; }
-.hc-w-70 { width: 70%; }
-.hc-w-75 { width: 75%; }
-.hc-w-80 { width: 80%; }
-.hc-w-85 { width: 85%; }
-.hc-w-90 { width: 90%; }
-.hc-w-95 { width: 95%; }
-.hc-w-100 { width: 100%; }
+.fc-w-5 { width: 5%; }
+.fc-w-10 { width: 10%; }
+.fc-w-15 { width: 15%; }
+.fc-w-20 { width: 20%; }
+.fc-w-25 { width: 25%; }
+.fc-w-30 { width: 30%; }
+.fc-w-35 { width: 35%; }
+.fc-w-40 { width: 40%; }
+.fc-w-45 { width: 45%; }
+.fc-w-50 { width: 50%; }
+.fc-w-55 { width: 55%; }
+.fc-w-60 { width: 60%; }
+.fc-w-65 { width: 65%; }
+.fc-w-70 { width: 70%; }
+.fc-w-75 { width: 75%; }
+.fc-w-80 { width: 80%; }
+.fc-w-85 { width: 85%; }
+.fc-w-90 { width: 90%; }
+.fc-w-95 { width: 95%; }
+.fc-w-100 { width: 100%; }
