--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -24,7 +24,7 @@
                 </mat-form-field>
                 <footer>
                     <div class="fc-txt-right fc-ptop-1">
-                        <button mat-button [routerLink]="['/recover-password']">Esqueceu a senha?</button>
+                        <button mat-button [routerLink]="['/recover-password']" type="button">Esqueceu a senha?</button>
                     </div>
                     <div class="fc-w-100 fc-ptop-1">
                         <button type="submit" mat-raised-button color="primary" class="fc-w-100">Login</button>
