criando seção de lista de chats privados e em grupo

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="fc-flex">
+    <aside class="fc-w-30">
+        <fc-chat-list></fc-chat-list>
+    </aside>
+    <main class="fc-w-70"></main>
+</div>
