ajustando layout da seção de lista de chats

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="fc-flex">
+<div class="fc-flex fc-full-height">
     <aside class="fc-w-30">
         <fc-chat-list></fc-chat-list>
     </aside>
