--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .fc-flex { display: flex; }
 .fc-align-items { align-items: center; }
 
+.fc-full-height { height: 100vh; }
+
+.fc-p-1 { padding: 8px; }
+.fc-p-2 { padding: 16px; }
+.fc-p-3 { padding: 24px; }
+.fc-p-4 { padding: 32px; }
+.fc-p-5 { padding: 40px; }
+
 .fc-ptop-1 { padding-top: 8px; }
 .fc-ptop-2 { padding-top: 16px; }
 .fc-ptop-3 { padding-top: 24px; }
