corrigindo altura da seção da lista de chats privados e em grupo

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .fc-flex { display: flex; }
 .fc-align-items { align-items: center; }
 
+.fc-height-10 { height: 10vh; }
+.fc-height-20 { height: 20vh; }
+.fc-height-30 { height: 30vh; }
+.fc-height-40 { height: 40vh; }
+.fc-height-50 { height: 50vh; }
+.fc-height-60 { height: 60vh; }
+.fc-height-70 { height: 70vh; }
+.fc-height-80 { height: 80vh; }
+.fc-height-90 { height: 90vh; }
 .fc-full-height { height: 100vh; }
 
 .fc-p-1 { padding: 8px; }
