--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="fc-flex fc-full-height">
-    <aside class="fc-w-30">
+    <aside class="fc-w-30 fc-border-right">
         <fc-chat-list></fc-chat-list>
+        <fc-user-section></fc-user-section>
     </aside>
     <main class="fc-w-70"></main>
 </div>
