--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -3,5 +3,7 @@
         <fc-chat-list></fc-chat-list>
         <fc-user-section></fc-user-section>
     </aside>
-    <main class="fc-w-70"></main>
+    <main class="fc-w-70">
+        <fc-active-chat></fc-active-chat>
+    </main>
 </div>
